--- a/www/index.html
+++ b/www/index.html
@@ -1044,9 +1044,10 @@
                         page != pages.CLIENT_ERROR &&
                         page != pages.SERVER_ERROR &&
                         page != pages.HOME &&
-                        // page != pages.EDIT &&
-                        page != pages.QUERY &&
-                        page != pages.CREATE_QUERY &&
+                        page != pages.EDIT &&
+                        page != pages.BROWSE &&
+                        // page != pages.QUERY &&
+                        // page != pages.CREATE_QUERY &&
                         page != pages.DELETE_ACCOUNT &&
                         page != pages.PROFILE) {
                         this.show_page(page);
