--- a/www/index.html
+++ b/www/index.html
@@ -397,39 +397,29 @@
         <div class="col-0 col-sm-1 col-md-2 col-lg-3">
         </div>
     </div>
-    <div class="row connected_content fixed"
+    <div class="connected_content fixed"
         style="display: none; position: relative;; z-index:5; left:0px; top:0px; width:100%; height:auto;" id="menu">
-        <div class="col-0 col-sm-0 col-md-0 col-lg-0">
-        </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-            <br>
-            <div style="text-align: center;">
-                <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
-                    class="btn btn-outline-success mx-auto" onclick="state.show_page(pages.HOME); ">Home</button>
-                <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
-                    class="btn btn-outline-success mx-auto" onclick="state.show_page(pages.BROWSE); ">Browse</button>
-                <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
-                    class="btn btn-outline-success mx-auto" onclick="state.show_page(pages.EDIT); ">Edit</button>
-                <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
-                    class="btn btn-outline-success mx-auto" onclick="state.show_page(pages.CREATE); ">Create</button>
-                <button id="menu_profile_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
-                    class="logged_in_content btn btn-outline-primary mx-auto"
-                    onclick="state.show_page(pages.PROFILE);;">Profile</button>
-                <button id="menu_login_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
-                    class="logged_out_content btn btn-outline-success mx-auto"
-                    onclick="state.show_page(pages.LOGIN);">Login</button>
-                <button id="menu_signup_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
-                    class="logged_out_content btn btn-outline-primary mx-auto"
-                    onclick="state.show_page(pages.SIGNUP);">Sign
-                    Up</button>
-                <button id="menu_logout_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
-                    class="logged_in_content btn btn-outline-danger mx-auto"
-                    onclick="state.show_page(pages.LOGOUT);">Log
-                    Out</button>
-            </div>`
-        </div>
-        <div class="col-0 col-sm-0 col-md-0 col-lg-0">
-        </div>
+        <br>
+        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+            onclick="state.show_page(pages.HOME); ">Home</button>
+        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+            onclick="state.show_page(pages.BROWSE); ">Browse</button>
+        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+            onclick="state.show_page(pages.EDIT); ">Edit</button>
+        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+            onclick="state.show_page(pages.CREATE); ">Create</button>
+        <button id="menu_profile_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
+            class="logged_in_content btn btn-outline-primary mx-auto"
+            onclick="state.show_page(pages.PROFILE);;">Profile</button>
+        <button id="menu_login_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
+            class="logged_out_content btn btn-outline-success mx-auto"
+            onclick="state.show_page(pages.LOGIN);">Login</button>
+        <button id="menu_signup_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
+            class="logged_out_content btn btn-outline-primary mx-auto" onclick="state.show_page(pages.SIGNUP);">Sign
+            Up</button>
+        <button id="menu_logout_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
+            class="logged_in_content btn btn-outline-danger mx-auto" onclick="state.show_page(pages.LOGOUT);">Log
+            Out</button>
     </div>
 
     <div style="display:block; position:relative; left:0px; top:0px; width:100%; height:100%;">
@@ -1213,9 +1203,9 @@
                     }
 
                     for (var i = 0; i < image_data.data.length; i += 4) {
-                        image_data.data[i] = (image_data.data[i]-real_min)/(real_max-real_min);
-                        image_data.data[i+ 1] = (image_data.data[i + 1]-real_min)/(real_max-real_min);
-                        image_data.data[i+ 2] = (image_data.data[i+ 2]-real_min)/(real_max-real_min);
+                        image_data.data[i] = (image_data.data[i] - real_min) / (real_max - real_min);
+                        image_data.data[i + 1] = (image_data.data[i + 1] - real_min) / (real_max - real_min);
+                        image_data.data[i + 2] = (image_data.data[i + 2] - real_min) / (real_max - real_min);
                     }
 
                     ctx.putImageData(image_data, 0, 0);
@@ -1453,7 +1443,7 @@
                 }.bind(this));
                 this.page_history.push(this.current_page_state)
                 /*
-
+ 
                 for (var i = floating_pages.length - 1; i >= 0; i--) {
                     var floating_page = this.page_history[floating_pages[i]]
                     this.current_page = floating_page.page;
@@ -1462,7 +1452,7 @@
                     }.bind(this));
                     this.page_history.push(floating_page)
                 }
-
+ 
                 */
             }).bind(state);
 
@@ -1586,7 +1576,7 @@
                 floating_start = this.page_history.length-floating_pages.length;
                 this.page_history = this.page_history.slice(0, floating_start).concat([new_page_state]).concat(this.page_history.slice(floating_start));
             }
-
+ 
             else */
             if (this.current_page_state && (this.current_page_state.page != page || this.current_page_state.message != message || this.current_page_state.subtext != subtext)) {
                 this.moving = true;
@@ -1788,13 +1778,13 @@
         }
         window.html_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_html"), {
             mode: "x-shader/x-fragment",
-            lineNumbers:false,
+            lineNumbers: false,
             theme: "the-matrix",
-            autoRefresh:true,
+            autoRefresh: true,
             lineWrapping: true
         });
         window.html_editor.setValue(
-`void main(){
+            `void main(){
   float cat = sin(1.0f+time);
   gl_FragColor = vec4(cat);
 }`
