--- a/www/index.html
+++ b/www/index.html
@@ -398,7 +398,7 @@
         </div>
     </div>
     <div class="connected_content fixed"
-        style="display: none; position: relative;; z-index:5; left:0px; top:0px; width:100%; height:auto;" id="menu">
+        style="text-align:center; display: none; position: relative;; z-index:5; left:0px; top:0px; width:100%; height:auto;" id="menu">
         <br>
         <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
             onclick="state.show_page(pages.HOME); ">Home</button>
