--- a/www/index.html
+++ b/www/index.html
@@ -630,6 +630,31 @@
                             <textarea id="algorithm_html" rows="8" style="text-align:left; border: 1px solid #0F0;"
                                 placeholder="Enter html here..." value="{{algorithm.html}}"></textarea>
                         </div>
+                        <br>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>JavaScript</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="javascript_checkbox" type="checkbox" value="">
+                                <label for="javascript_checkbox"></label>
+                            </div>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <textarea id="algorithm_javascript" rows="8" style="text-align:left; border: 1px solid #0F0;"
+                                placeholder="Enter JavaScript here..." value="{{algorithm.client}}"></textarea>
+                        </div>
+                        <br>
                     </div>
                 </h1>
             </div>
@@ -1778,18 +1803,21 @@
             load_tree()
         }
         window.html_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_html"), {
-            mode: "x-shader/x-fragment",
+            mode: "xml",
             lineNumbers: false,
             theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true
         });
-        window.html_editor.setValue(
-            `void main(){
-  float cat = sin(1.0f+time);
-  gl_FragColor = vec4(cat);
-}`
-        );
+        window.javascript_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_javascript"), {
+            mode: "javascript",
+            lineNumbers: false,
+            theme: "the-matrix",
+            autoRefresh: true,
+            lineWrapping: true
+        });
+        window.javascript_editor.setValue('//Enter JavaScript here. -->');
+        window.html_editor.setValue('<!--Enter HTML here. -->');
     </script>
 </body>
 
