--- a/www/index.html
+++ b/www/index.html
@@ -1090,8 +1090,8 @@
                         page != pages.CLIENT_ERROR &&
                         page != pages.SERVER_ERROR &&
                         page != pages.HOME &&
-                        page != pages.EDIT &&
-                        page != pages.BROWSE &&
+                        // page != pages.EDIT &&
+                        // page != pages.BROWSE &&
                         // page != pages.QUERY &&
                         // page != pages.CREATE_QUERY &&
                         page != pages.DELETE_ACCOUNT &&
