--- a/www/index.html
+++ b/www/index.html
@@ -699,11 +699,24 @@
                 </h1>
                 <h1 class="editable"
                     style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                    
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>WebGL Context(s)</a>
                             <br>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
+                            <a>Context Identifier</a>
+                            <br>
+                            <br>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                            <input style="text-align:center; color:#fff;" placeholder="Context name..."
+                                value="{{algorithm.contexts[0].name}}"></input>
+                            <br>
+                            <br>
+
                         </div>
                     </div>
                     <div class="row">
@@ -714,7 +727,7 @@
                     </div>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>Public</a>
+                            <a>SCREEN_SIZE</a>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
@@ -726,6 +739,59 @@
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>NEXT_LOWEST_POWER_OF_TWO</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="public_checkbox" type="checkbox" value="">
+                                <label for="public_checkbox"></label>
+                            </div>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>NEXT_HIGHEST_POWER_OF_TWO</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="public_checkbox" type="checkbox" value="">
+                                <label for="public_checkbox"></label>
+                            </div>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>EXACT</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="public_checkbox" type="checkbox" value="">
+                                <label for="public_checkbox"></label>
+                            </div>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <textarea id="algorithm_javascript" rows="8"
+                                style="text-align:left; border: 1px solid #0F0;" placeholder="Enter JavaScript here..."
+                                value="{{algorithm.client}}"></textarea>
+                        </div>
+                        <br>
                     </div>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
