--- a/www/index.html
+++ b/www/index.html
@@ -733,8 +733,8 @@
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="public_checkbox" type="checkbox" value="">
-                                <label for="public_checkbox"></label>
+                                <input style="float:right;" id="width_screen_size" type="checkbox" value="">
+                                <label for="width_screen_size"></label>
                             </div>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
@@ -748,8 +748,8 @@
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="public_checkbox" type="checkbox" value="">
-                                <label for="public_checkbox"></label>
+                                <input style="float:right;" id="width_next_lowest_power_of_two" type="checkbox" value="">
+                                <label for="width_next_lowest_power_of_two"></label>
                             </div>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
@@ -763,8 +763,8 @@
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="public_checkbox" type="checkbox" value="">
-                                <label for="public_checkbox"></label>
+                                <input style="float:right;" id="width_next_highest_power_of_two" type="checkbox" value="">
+                                <label for="width_next_highest_power_of_two"></label>
                             </div>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
@@ -778,8 +778,8 @@
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="public_checkbox" type="checkbox" value="">
-                                <label for="public_checkbox"></label>
+                                <input style="float:right;" id="width_exact" type="checkbox" value="">
+                                <label for="width_exact"></label>
                             </div>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
@@ -793,6 +793,90 @@
                         </div>
                         <br>
                     </div>
+                    <br>
+
+
+                    <div class="row">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <a>Context Height</a>
+                            <br>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>SCREEN_SIZE</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="width_screen_size" type="checkbox" value="">
+                                <label for="width_screen_size"></label>
+                            </div>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>NEXT_LOWEST_POWER_OF_TWO</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="width_next_lowest_power_of_two" type="checkbox" value="">
+                                <label for="width_next_lowest_power_of_two"></label>
+                            </div>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>NEXT_HIGHEST_POWER_OF_TWO</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="width_next_highest_power_of_two" type="checkbox" value="">
+                                <label for="width_next_highest_power_of_two"></label>
+                            </div>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>EXACT</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="width_exact" type="checkbox" value="">
+                                <label for="width_exact"></label>
+                            </div>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <textarea id="algorithm_javascript" rows="8"
+                                style="text-align:left; border: 1px solid #0F0;" placeholder="Enter JavaScript here..."
+                                value="{{algorithm.client}}"></textarea>
+                        </div>
+                        <br>
+                    </div>
+                    <br>
+
+
+
+
+
+
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="button" class="btn btn-outline-danger mx-auto">Delete Context</button>
