--- a/www/index.html
+++ b/www/index.html
@@ -810,8 +810,8 @@
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="width_screen_size" type="checkbox" value="">
-                                <label for="width_screen_size"></label>
+                                <input style="float:right;" id="height_screen_size" type="checkbox" value="">
+                                <label for="height_screen_size"></label>
                             </div>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
@@ -825,8 +825,8 @@
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="width_next_lowest_power_of_two" type="checkbox" value="">
-                                <label for="width_next_lowest_power_of_two"></label>
+                                <input style="float:right;" id="height_next_lowest_power_of_two" type="checkbox" value="">
+                                <label for="height_next_lowest_power_of_two"></label>
                             </div>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
@@ -840,8 +840,8 @@
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="width_next_highest_power_of_two" type="checkbox" value="">
-                                <label for="width_next_highest_power_of_two"></label>
+                                <input style="float:right;" id="height_next_highest_power_of_two" type="checkbox" value="">
+                                <label for="height_next_highest_power_of_two"></label>
                             </div>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
@@ -855,8 +855,8 @@
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="width_exact" type="checkbox" value="">
-                                <label for="width_exact"></label>
+                                <input style="float:right;" id="height_exact" type="checkbox" value="">
+                                <label for="height_exact"></label>
                             </div>
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
