--- a/www/index.html
+++ b/www/index.html
@@ -554,6 +554,16 @@
 
                 <h1 class="editable"
                     style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    <div class="row">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <a>General Settings</a>
+                            <br>
+                        </div>
+                    </div>
+                </h1>
+                <br>
+                <h1 class="editable"
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
 
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
@@ -659,8 +669,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <button type="button"
-                                class="btn btn-outline-success mx-auto">Add Image</button>
+                            <button type="button" class="btn btn-outline-success mx-auto">Add Image</button>
                             <br>
                         </div>
                     </div>
@@ -675,8 +684,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <button type="button"
-                                class="btn btn-outline-success mx-auto">Add Sound</button>
+                            <button type="button" class="btn btn-outline-success mx-auto">Add Sound</button>
                             <br>
                         </div>
                     </div>
@@ -691,8 +699,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <button type="button"
-                                class="btn btn-outline-success mx-auto">Add Video</button>
+                            <button type="button" class="btn btn-outline-success mx-auto">Add Video</button>
                             <br>
                         </div>
                     </div>
@@ -748,7 +755,8 @@
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="width_next_lowest_power_of_two" type="checkbox" value="">
+                                <input style="float:right;" id="width_next_lowest_power_of_two" type="checkbox"
+                                    value="">
                                 <label for="width_next_lowest_power_of_two"></label>
                             </div>
                         </div>
@@ -763,7 +771,8 @@
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="width_next_highest_power_of_two" type="checkbox" value="">
+                                <input style="float:right;" id="width_next_highest_power_of_two" type="checkbox"
+                                    value="">
                                 <label for="width_next_highest_power_of_two"></label>
                             </div>
                         </div>
@@ -825,7 +834,8 @@
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="height_next_lowest_power_of_two" type="checkbox" value="">
+                                <input style="float:right;" id="height_next_lowest_power_of_two" type="checkbox"
+                                    value="">
                                 <label for="height_next_lowest_power_of_two"></label>
                             </div>
                         </div>
@@ -840,7 +850,8 @@
                         </div>
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="height_next_highest_power_of_two" type="checkbox" value="">
+                                <input style="float:right;" id="height_next_highest_power_of_two" type="checkbox"
+                                    value="">
                                 <label for="height_next_highest_power_of_two"></label>
                             </div>
                         </div>
@@ -885,8 +896,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <button type="button"
-                                class="btn btn-outline-success mx-auto">Add OpenGL Context</button>
+                            <button type="button" class="btn btn-outline-success mx-auto">Add OpenGL Context</button>
                             <br>
                         </div>
                     </div>
