--- a/www/index.html
+++ b/www/index.html
@@ -561,7 +561,6 @@
                         </div>
                     </div>
                 </h1>
-                <br>
                 <h1 class="editable"
                     style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
 
@@ -659,6 +658,15 @@
                     </div>
                 </h1>
 
+                <h1 class="editable"
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    <div class="row">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <a>Media Files</a>
+                            <br>
+                        </div>
+                    </div>
+                </h1>
                 <h1 class="editable"
                     style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
