--- a/www/index.html
+++ b/www/index.html
@@ -477,6 +477,16 @@
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
             <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+                
+                <h1 class="read_only"
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    <div class="row">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <a>Algorithm Information</a>
+                            <br>
+                        </div>
+                    </div>
+                </h1>
                 <h1 onclick="profileClicked(algorithm.owner)" class="read_only"
                     style="text-align:center; padding: 18px; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <img src="{{((algorithm.thumbnail && algorithm.thumbnail.url) ? algorithm.thumbnail.url : defaultImage)}}"
@@ -553,7 +563,7 @@
                 </h1>
 
                 <h1 class="editable"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>General Settings</a>
@@ -659,7 +669,7 @@
                 </h1>
 
                 <h1 class="editable"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>Media Files</a>
