--- a/www/index.html
+++ b/www/index.html
@@ -479,7 +479,7 @@
             <div class="col-12 col-sm-12 col-md-10 col-lg-8">
                 
                 <h1 class="read_only"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>Algorithm Information</a>
@@ -563,7 +563,7 @@
                 </h1>
 
                 <h1 class="editable"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>General Settings</a>
@@ -669,7 +669,7 @@
                 </h1>
 
                 <h1 class="editable"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>Media Files</a>
@@ -722,14 +722,18 @@
                         </div>
                     </div>
                 </h1>
+                
                 <h1 class="editable"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>WebGL Context(s)</a>
                             <br>
                         </div>
                     </div>
+                </h1>
+                <h1 class="editable"
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
                             <a>Context Identifier</a>
