--- a/www/index.html
+++ b/www/index.html
@@ -910,12 +910,13 @@
 
 
 
-                    <div class="row">
+                    <div class="row" style="border-bottom: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="button" class="btn btn-outline-danger mx-auto">Delete Context</button>
                             <br>
                         </div>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="button" class="btn btn-outline-success mx-auto">Add OpenGL Context</button>
