--- a/www/index.html
+++ b/www/index.html
@@ -419,13 +419,13 @@
             </div>
             <div class="col-12 col-sm-12 col-md-10 col-lg-8">
                 <h1
-                    style="text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     Welcome!
                     <br>
                 </h1>
                 <br>
                 <h1 class="logged_out_content"
-                    style="text-align:left; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:left; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     For more information, use one of the three option buttons below:
                     <br>
                     <br>
@@ -442,7 +442,7 @@
                     </div>
                 </h1>
                 <h1 class="logged_in_content"
-                    style="text-align:left; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:left; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     You have successfully logged in! To continue, use one of the options below:
                     <br>
                     <br>
@@ -479,7 +479,7 @@
             <div class="col-12 col-sm-12 col-md-10 col-lg-8">
                 
                 <h1 class="read_only"
-                    style="text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>Algorithm Information</a>
@@ -563,7 +563,7 @@
                 </h1>
 
                 <h1 class="editable"
-                    style="text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>General Settings</a>
@@ -669,7 +669,7 @@
                 </h1>
 
                 <h1 class="editable"
-                    style="text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>Media Files</a>
@@ -724,7 +724,7 @@
                 </h1>
                 
                 <h1 class="editable"
-                    style="text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>WebGL Context(s)</a>
@@ -937,7 +937,7 @@
                 <div style="height: 7.5%;"></div>
 
                 <h1
-                    style="text-align:left; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:left; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
 
                     <div style="text-align:center; color:#f00; font-size: 24px !important;" class="blink-white">
                         This action is permanent and irreversable. Please make sure you actually intend to do this!
@@ -997,7 +997,7 @@
             </div>
             <div class="col-12 col-sm-12 col-md-10 col-lg-8">
                 <h1
-                    style="text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     Here you can manage your account settings.
                     <br>
                     <br>
